package behavioral.command.commands;

@FunctionalInterface
public interface Command {
  public void execute();
}
