@startuml
skinparam BackgroundColor #F8F8F8
skinparam  Shadowing false
skinparam RoundCorner 3
skinparam noteBorderColor Khaki
skinparam noteBackgroundColor #FCF3CF
skinparam noteFontName Courier
skinparam noteFontSite 4

skinparam class {
BackgroundColor white
ArrowColor CornFlowerBlue
BorderColor #C8C8C8
BorderThickness 1.5
HeaderBackgroundColor LightGrey
}

class Client {}
note left of Client
  * Passes Receiver to commands
  * instantiates the commands
end note
class Invoker {
  - command:Command
  + setCommand(Command)
  + execute()
}

note right of Invoker::execute
  command.invoke()
end note

class Receiver {
  + operation1(params1)
  + operation2(params2)
}

note left of Receiver
  There can be more
  than one receiver
end note

interface Command {
  +invoke()
}

class Command1 {
  - receiver:Receiver
  - params1
  + Command1(Receiver)
  +invoke(params1)
}

note left of Command1::invoke
  receiver.operation1(params1)
end note

class Command2 {
  - receiver:Receiver
  - params2
  + Command1(Receiver)
  +invoke(params2)
}

Client -r-> Invoker
Client --> Receiver
Invoker *--> Command
Command <|-- Command1
Command <|-- Command2
Command o-l-> Receiver



@enduml